@@ -1,5 +1,15 @@
 2014-07-04  Eli Zaretskii  <eliz@gnu.org>
 
+	* xdisp.c (redisplay_window): If redisplay of a window ends up
+	with point in a partially visible line at end of the window, make
+	sure the amended position of point actually has smaller Y
+	coordinate; if not, give up and scroll the display.  (Bug#17905)
+
+	* window.c (window_scroll_pixel_based): When point ends up at the
+	last fully visible line, don't let move_it_to stop at the left
+	edge of the line and dupe us into thinking point is inside the
+	scroll margin.
+
 	* w32.c (network_interface_info): Make sure the argument is a
 	Lisp string.
 
